--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,7 @@ buildscript {
     classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.6.3"
     classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.8"
     classpath "com.github.ben-manes:gradle-versions-plugin:0.13.0"
-    classpath "me.tatarka:gradle-retrolambda:3.3.0"
     classpath "me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2"
-    classpath "com.neenbedankt.gradle.plugins:android-apt:1.8"
   }
 }
 
@@ -32,8 +30,6 @@ apply plugin: "android-command"
 apply plugin: "com.github.triplet.play"
 apply plugin: "com.getkeepsafe.dexcount"
 apply plugin: "com.vanniktech.android.apk.size"
-apply plugin: "me.tatarka.retrolambda"
-apply plugin: "com.neenbedankt.android-apt"
 apply plugin: "net.ltgt.errorprone"
 apply plugin: "com.github.ben-manes.versions"
 apply from: rootProject.file("gradle/buildScan.gradle")
@@ -50,6 +46,10 @@ android {
 
     vectorDrawables {
       useSupportLibrary true
+    }
+
+    jackOptions {
+      enabled true
     }
   }
 
@@ -127,8 +127,8 @@ dependencies {
   debugCompile "com.squareup.leakcanary:leakcanary-android:1.4"
   releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.4"
 
-  apt "com.jakewharton:butterknife-compiler:${butterKnifeVersion}"
-  apt "com.google.dagger:dagger-compiler:${daggerVersion}"
+  annotationProcessor "com.jakewharton:butterknife-compiler:${butterKnifeVersion}"
+  annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
 
   provided "org.glassfish:javax.annotation:10.0-b28"
 
@@ -137,8 +137,8 @@ dependencies {
   androidTestCompile "com.squareup.assertj:assertj-android:1.1.1"
   androidTestCompile "com.android.support:support-annotations:${supportLibraryVersion}"
   androidTestCompile "com.android.support.test:runner:0.5"
-  androidTestCompile"com.android.support.test.espresso:espresso-core:${espressoVersion}"
-  androidTestCompile"com.android.support.test.espresso:espresso-intents:${espressoVersion}"
+  androidTestCompile "com.android.support.test.espresso:espresso-core:${espressoVersion}"
+  androidTestCompile "com.android.support.test.espresso:espresso-intents:${espressoVersion}"
   androidTestCompile("com.android.support.test.espresso:espresso-contrib:${espressoVersion}") {
     exclude module: "appcompat"
     exclude module: "support-v4"
@@ -159,6 +159,4 @@ dependencies {
   testCompile "org.robolectric:shadows-support-v4:3.1.2"
   testCompile "org.khronos:opengl-api:gl1.1-android-2.1_r1"
   testCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.4"
-
-  retrolambdaConfig "net.orfjackal.retrolambda:retrolambda:2.3.0"
 }
